# ChangeLog for dev-lang/tk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.131 2009/10/07 15:33:02 armin76 Exp $

  07 Oct 2009; Raúl Porcel <armin76@gentoo.org> tk-8.5.7.ebuild:
  ia64/s390/sh/sparc stable wrt #280845

*tk-8.5.7-r1 (06 Oct 2009)

  06 Oct 2009; Federico Ferri <mescalinum@gentoo.org> +tk-8.5.7-r1.ebuild:
  normalize $S path, bug #280766 (pkgcore)

  27 Sep 2009; Markus Meier <maekke@gentoo.org> tk-8.5.7.ebuild:
  arm stable, bug #280845

  22 Sep 2009; Markus Meier <maekke@gentoo.org> tk-8.5.7.ebuild:
  amd64 stable, bug #280845

  31 Aug 2009; Brent Baude <ranger@gentoo.org> tk-8.5.7.ebuild:
  Marking tk-8.5.7 ppc64 for bug 280845

  29 Aug 2009; nixnut <nixnut@gentoo.org> tk-8.5.7.ebuild:
  ppc stable #280845

  29 Aug 2009; Tobias Klausmann <klausman@gentoo.org> tk-8.5.7.ebuild:
  Stable on alpha, bug #280845

  27 Aug 2009; Jeroen Roovers <jer@gentoo.org> tk-8.5.7.ebuild:
  Stable for HPPA (bug #280845).

  18 Aug 2009; Christian Faulhammer <fauli@gentoo.org> tk-8.5.7.ebuild:
  stable x86, bug 280845

  07 May 2009; Tobias Klausmann <klausman@gentoo.org> tk-8.4.18-r1.ebuild:
  Stable on alpha, bug #268174

  06 May 2009; Kenneth Prugh <ken69267@gentoo.org> tk-8.4.18-r1.ebuild:
  amd64 stable, bug #268174

  06 May 2009; Jeroen Roovers <jer@gentoo.org> tk-8.4.18-r1.ebuild:
  Stable for HPPA (bug #268174).

  06 May 2009; Ferris McCormick <fmccor@gentoo.org> tk-8.4.18-r1.ebuild:
  Sparc stable, bug #268174.

  06 May 2009; Christian Faulhammer <fauli@gentoo.org> tk-8.4.18-r1.ebuild:
  stable x86, bug 268174

  06 May 2009; Brent Baude <ranger@gentoo.org> tk-8.4.18-r1.ebuild:
  Marking tk-8.4.18-r1 ppc64 and ppc for bug 268174

*tk-8.5.7 (17 Apr 2009)

  17 Apr 2009; Federico Ferri <mescalinum@gentoo.org> -tk-8.5.1.ebuild,
  -tk-8.5.6.ebuild, +tk-8.5.7.ebuild:
  bump to version 8.5.7

  25 Feb 2009; Raúl Porcel <armin76@gentoo.org> tk-8.4.19-r1.ebuild,