@@ -11,9 +11,11 @@ AUX tk-configure-LANG.patch 1686 RMD160 4ff8355af81705058fd411910dfae94887bcd884
 DIST tk8.4.18-src.tar.gz 3363853 RMD160 9c01ba85575a230231793a9885457c98046e41bb SHA1 c1032f3cacd40406065fc1f46ecd217f50329273 SHA256 1757b0daff8a8bb962e612691236ae838e353521e7184464a5d32225905eac18
 DIST tk8.4.19-src.tar.gz 3362694 RMD160 c963297655740ad4b29a99c489c35a64e5e817ce SHA1 56d09be8a7670b2686d76b7526ff24b0240ca120 SHA256 d056fe6c204ac31539616e1069522dd5864a580b64e521fe1a49bc895ca8699f
 DIST tk8.5.7-src.tar.gz 3779867 RMD160 8ff412f84ffb76b9b0da5a32f7404c37a5337003 SHA1 b5def6871e53c78354ac01b27abd523bb4295158 SHA256 d9366ed397c4bde96550ec9d30a8fcf67878cf26937cae93e580726a87d7af30
+DIST tk8.5.8-src.tar.gz 3789533 RMD160 494a0d217ce6a81c10afb91b344c6110dd0986b0 SHA1 ea13b9d0bf611c7671c488bc0b5f3f739ad7e399 SHA256 9737da5c30e631281062b6acbb4753840f9e95657c78e37657d9c520589ab2d4
 EBUILD tk-8.4.18-r1.ebuild 3769 RMD160 7a7d2dcdd79d6085a623b362428ca3db1d786c54 SHA1 57507322251e88c2117ff2a36cec95a188c2b27a SHA256 d2904c79ed32710f66cd9768dc48d692cd017770310a704da5d1982c0cceb5a6
 EBUILD tk-8.4.19-r1.ebuild 3776 RMD160 a393596165c975122c094db7546099785c5fe608 SHA1 f93c5a04b3a7ce336f6615429428f486ae621773 SHA256 b77854e6faf077ab4e9b9c5412009368a5b1607879a0349f1dc25e28442e64ae
 EBUILD tk-8.5.7-r1.ebuild 3229 RMD160 8aea356c7e0fe99f8715c88d6620abd6b36f7295 SHA1 626eafa6a5a28df4a9a0ce98aa866579e2f24e64 SHA256 4066b3c3dd5a910940b16d396f052040f1a1e8191edb5e4a2feebea635eefdcc
 EBUILD tk-8.5.7.ebuild 3144 RMD160 7428333fe5ef591277d78edcb4d078b8aac247b8 SHA1 20e120f1e4883a338e9812938c1456f8fb282296 SHA256 8715deb314ce86f18090e987a69a8cfc7d5ea6689cbd71a8b11edc8b69df6389
-MISC ChangeLog 17727 RMD160 84a24f12ff9b1ffe77241df4fcd02fc9da91d2ee SHA1 f11f5e5dd4421f6947b6b33d6bbde12eeade7557 SHA256 f3e5149d007a532b825b0e0a7e4ad927bd2222180d37ae6b371501ae0f6bb0c2
+EBUILD tk-8.5.8.ebuild 3223 RMD160 17aa51626c00d98458f1c082cccd32dc7b75fd38 SHA1 b0c396a195319343355df836bbad8fcacd9aae5b SHA256 1b347aedea590fa828b97d35e3ae4ccd4b6b4913d76b7b26cea35f75d4893b6c
+MISC ChangeLog 17840 RMD160 076c3f524490ae2e7f94b763648dab3f65f53bbe SHA1 239e35f111459a7594012dd3aac61f21293d6c38 SHA256 4e589855b77df030e0eb99e503ac761848e5e270ff5c1aa34bf728419dcf2acb
 MISC metadata.xml 159 RMD160 117cc289391c0477579de68e7347628756673eac SHA1 37f242cbf27c6e859fc63487487fdcae09d6931f SHA256 2cf13398186ae4abcd9f41c51ffb3bcdcc7da32df2c2af5c2de2e2cc8ad194ce
