@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/tk
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.131 2009/10/07 15:33:02 armin76 Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.132 2010/01/07 14:20:28 patrick Exp $
+
+*tk-8.5.8 (07 Jan 2010)
+
+  07 Jan 2010; Patrick Lauer <patrick@gentoo.org> +tk-8.5.8.ebuild:
+  Bump for #297448
 
   07 Oct 2009; Raúl Porcel <armin76@gentoo.org> tk-8.5.7.ebuild:
   ia64/s390/sh/sparc stable wrt #280845
